tests/baselines/reference/instantiateGenericClassWithZeroTypeArguments.errors.txt
instantiateGenericClassWithZeroTypeArguments.ts(4,5): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
instantiateGenericClassWithZeroTypeArguments.ts(10,5): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
instantiateGenericClassWithZeroTypeArguments.ts(11,5): error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.


==== instantiateGenericClassWithZeroTypeArguments.ts (3 errors) ====
    // no errors expected when instantiating a generic type with no type arguments provided
    
    class C<T> {
        x: T;
        ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
    }
    
    var c = new C();
    
    class D<T, U> {
        x: T
        ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
        y: U
        ~
!!! error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
    }
    
    var d = new D();
    